examples/test/testpolicy14000.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14000
  namespace: namespace376
spec:
  podSelector:
    matchLabels:
      key49: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value22
          key21: value4
          key33: value47
      podSelector:
        matchLabels:
          key5: value32
          key18: value15
          key49: value29
